--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,10 +1,17 @@
-.footer{
+.footer {
   position:absolute; 
   bottom:0px; 
-  height:30px; 
+  height:60px; 
   left:0px; 
   right:0px; 
   overflow:hidden;
   background: #000;
   color: #fff;  
+}
+
+.slogan {
+  margin: 15px 10px;
+  text-align: center;
+  font-style: italic;
+  font-size: 1.2em;
 }
