--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -2,9 +2,10 @@
   position: absolute; 
   top: 0px; 
   left: 0px; 
-  height: 60px; 
+  height: 80px; 
   right: 0px;
   overflow: hidden;
   background: #000;
   color: #fff;
+  padding: 0px 20px;
 }
