restyled search bar and movie result list

--- a/client/src/components/MovieSearchResults/MovieSearchResults.css
+++ b/client/src/components/MovieSearchResults/MovieSearchResults.css
@@ -1,10 +1,10 @@
-.search {
+.movie-search-results {
   position:absolute; 
-  top: 80px; 
+  top: 60px; 
   left:0px; 
   right:0px; 
-  overflow:hidden;
+  overflow:auto;
   background: #fff;
-  bottom: 60px;
+  bottom: 0px;
   color: #000;
 }
