--- a/client/src/components/MovieSearchBar/MovieSearchBar.css
+++ b/client/src/components/MovieSearchBar/MovieSearchBar.css
@@ -1,13 +1,24 @@
 
+.movie-search-bar {
+  position:absolute; 
+  top: 0px; 
+  left:0px; 
+  right:0px; 
+  overflow:hidden;
+  background: #ddd;
+  color: #000;
+}
+
+
 .text-field-container{
   background: #ccc;
   border-radius: 5px;
   padding: 0px;
-  width:800px;
+
 }
 
 .text-field {
-  font-size: 20px;
+  font-size: 2.2em;
   background: #ccc;
   padding: 10px 10px;
   width: 670px;
