--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -7,5 +7,10 @@
   overflow: hidden;
   background: #000;
   color: #fff;
-  padding: 0px 20px;
+  padding: 20px 20px;
+}
+
+.app-header h1{
+  display:inline;
+  margin: 0px 10px
 }
